Keep empty hotbar slots in immutable snapshots